<resources>
    <string name="close">Close</string>
    <string name="shop">Shop</string>
    <string name="title">PedidoE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="add">Add</string>
    <string name="no_add">No add</string>
    <string name="cancel">Cancel</string>
    <string name="modify">Modify</string>
    <string name="send">Send</string>
    <string name="view_product">View products</string>
    <string name="number_units">Number of units</string>
    <string name="change_password">Change password</string>
    <string name="productos">Products</string>
    <string name="catalogs">Catalogs</string>
    <string name="centers">Centers</string>
    <string name="lateral_nav_menu_open">Open</string>
    <string name="lateral_nav_menu_close">Close</string>
    <string name="lateral_nav_menu_header_1_title">Common Actions</string>
    <string name="lateral_nav_menu_header_2_title">Orders</string>
    <string name="lateral_nav_menu_header_3_title">Personal</string>
    <string name="lateral_nav_menu_old_orders">Orders done</string>
    <string name="lateral_nav_menu_favourite_products">Favorite products</string>
    <string name="lateral_nav_menu_mails">Messages</string>
    <string name="lateral_nav_menu_profile">Profile</string>
    <string name="lateral_nav_menu_centers">Centers</string>
    <string name="lateral_nav_menu_providers">Sellers</string>
    <string name="lateral_nav_menu_makeorder">Make a order</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign out</string>
    <string name="product_categories">All categories</string>
    <string name="product_order_by_price_high">Price from high to low</string>
    <string name="product_order_by_price_low">Price from low to high</string>
    <string name="toolbar_proudct_list_search">Search product...</string>
    <string name="button_order_list_repeat">repeat</string>
    <string name="textview_shop_total_products">Total of products</string>
    <string name="textview_shop_tax_base">Tax Base:</string>
    <string name="textview_shop_total_taxes">Total Taxes:</string>
    <string name="alert_dialog_confirm_order_title">Order done</string>
    <string name="alert_dialog_confirm_order_message">The order has been processed correctly</string>
    <string name="textview_shop_total">Total:</string>
    <string name="textview_shop_center">Center:</string>
    <string name="textview_shop_seller">Seller:</string>
    <string name="textview_shop_order_summary">Order Summary</string>
    <string name="textview_shop_follow_buying">Continue shopping...</string>
    <string name="button_shop_confirm">Confirm order</string>
    <string name="alert_dialog_shop_empty_title">Shop</string>
    <string name="alert_dialog_shop_empty_message">The cart is empty, please, add a product...</string>
    <string name="alert_dialog_shop_confirm_message">¿Are you sure you want to confirm the order?</string>
    <string name="alert_dialog_shop_delete">¿Are you sure you want to empty the cart?</string>
    <string name="alert_dialog_shop_dialog_title_calendar">Calendar</string>
    <string name="shop_activity_dialog_message_reset_calendar">If you modify the amount, the product calendar will be reset.\n¿Are you sure you want to modify the amount?</string>
    <string name="shop_activity_breakdown">See breakdown</string>
    <string name="product_activity_no_catalog_dialog_title">No catalogs</string>
    <string name="product_activity_no_catalog_dialog_message">%s does not have any catalog setted</string>
    <string name="product_activity_select_center">Select a center ▲</string>
    <string name="product_activity_select_catalog">Select a catalog ▼</string>
    <string name="product_activity_add_product">If you want add this product, the current cart will be deleted. It´s not possible to make orders mixing products from different suppliers or for multiple centers</string>
    <string name="product_calendar_activity_units">Units: %d</string>
    <string name="product_calendar_activity_dialog_confirm_calendar_title">Confirm calendar</string>
    <string name="product_calendar_activity_dialog_confirm_calendar_message_no_days">There are not days to confirm</string>
    <string name="product_calendar_activity_dialog_confirm_question">¿Are you sure you want to confirm?</string>
    <string name="product_calendar_activity_dialog_clean_title">Clean calendar</string>
    <string name="product_calendar_activity_dialog_clean_message">The calendar has not been confirmed yet</string>
    <string name="product_calendar_activity_dialog_clean_calendar_message">¿Are you sure you want to clean the calendar?</string>
    <string name="product_calendar_activity_select_month">Select month</string>
    <string name="product_calendar_activity_confirm">Confirm</string>
    <string name="product_calendar_activity_clean">Clean</string>
    <string name="product_calendar_activity_number_units">Has been added %d units</string>
    <string name="product_calendar_activity_dialog_email_confirmation">Email confirmation</string>
    <string name="product_calendar_activity_dialog_email_message">An email has been sent your account, please review your mail to recover your password</string>
    <string name="product_calendar_activity_text_view">Enter your email</string>
    <string name="product_calendar_activity_edit_text">Enter your email...</string>
    <string name="check_email_activity_alert_title">Email validation</string>
    <string name="check_email_activity_alert_message">This email already exists</string>
    <string name="check_email_activity_enter_email">Enter your email</string>
    <string name="check_email_activity_your_email">Your email...</string>
    <string name="create_profile_activity_username">Username</string>
    <string name="create_profile_activity_password">Password</string>
    <string name="create_profile_activity_confirm_password">Confirm password</string>
    <string name="create_profile_activity_phone">Phone</string>
    <string name="create_profile_activity_email">Email</string>
    <string name="create_profile_activity_center_code">Activation code</string>
    <string name="create_profile_activity_create_account">Create account</string>
    <string name="profile_activity_username">Username</string>
    <string name="profile_activity_phone">Phone</string>
    <string name="profile_activity_email">Email</string>
    <string name="profile_activity_change_password">Change password</string>
    <string name="create_account_activity_alert_title">Account</string>
    <string name="create_account_activity_alert_message">The account has been created correctly</string>
    <string name="alert_dialog_order_activity_change_center">There is a pending order for center %s.\nIf the center is changed, the products added to cart will be lose.\n\n¿Do you wish to start a new order for %s?</string>
    <string name="alert_dialog_order_activity_change_seller">There is a pending order for seller %s.\nIf the seller is changed, the products added to cart will be lose.\n\n¿Do you wish to start a new order for %s?</string>
    <string name="alert_dialog_order_activity_button_deny">No change</string>
    <string name="alert_dialog_order_activity_change_center_button_confirm">Change center</string>
    <string name="alert_dialog_order_activity_change_seller_button_confirm">Change seller</string>
    <string name="alert_dialog_order_activity_no_catalog_message">Any catalog has been found</string>
    <string name="alert_dialog_order_activity_no_center_message">Any center has been found</string>
    <string name="main_activity_session_expired">Session expired</string>
    <string name="main_activity_session_expired_message">The session has expired, please, login again</string>
    <string name="main_activity_login">LOGIN</string>
    <string name="main_activity_create_account">CREATE ACCOUNT</string>
    <string name="main_activity_dialog_center_title">Center activation</string>
    <string name="main_activity_dialog_center_message">This center does not exists, please, enter other activation code</string>
    <string name="main_activity_enter_code">Enter your center activation code</string>
    <string name="main_activity_code">Code...</string>
    <string name="main_activity_activate_center">Activate center</string>
    <string name="main_activity_apk_new_version_title">New Version</string>
    <string name="main_activity_apk_new_version_message">There is a new application version: %s You will be redirected to Google Play Store to install it"</string>
    <string name="main_activity_apk_new_version__problem_message">There was a problem, please, contact with the app´s administrator</string>
    <string name="activity_seller_product_select_seller">Select a seller ▲</string>
    <string name="activity_seller_product_select_center">Select a center ▼</string>
    <string name="editText_change_password_activity_old_password">Old password</string>
    <string name="editText_change_password_activity_new_password">New password</string>
    <string name="editText_change_password_activity_confirm_password">Confirm password</string>
    <string name="change_password_activity_alert_dialog_message">The password has been changed correctly</string>
    <string name="login_activity_username">Username</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_digalog_message">Your account has not any center associated"</string>
    <string name="login_activity_digalog_title">Centers</string>
    <string name="login_activity_digalog_sign_in">Sign in</string>
    <string name="login_activity_digalog_recover_password">Recover password</string>
    <string name="landing_activity_favorties">Favorites</string>
    <string name="landing_activity_sellers">Sellers</string>
    <string name="landing_activity_products">Products</string>
    <string name="landing_activity_make_order">Make order</string>
    <string name="landing_activity_orders">Orders</string>
    <string name="landing_activity_centers">Centers</string>
    <string name="favorite_activity_alert_dialog_title">Remove favorite</string>
    <string name="favorite_activity_alert_dialog_message">¿Are you sure you want to remove this product from your favourite list?</string>
    <string name="favorite_activity_no_product_message">There are not any product on your favorite list yet</string>
    <string name="shop_breakdown_activity_product_name">Product</string>
    <string name="shop_breakdown_activity_price">Price</string>
    <string name="shop_breakdown_activity_quantity">Quantity</string>
    <string name="shop_breakdown_activity_total_base">Total base</string>
    <string name="shop_breakdown_activity_tax_type">Tax type</string>
    <string name="shop_breakdown_activity_tax">Tax</string>
    <string name="shop_breakdown_activity_total_tax">Total tax</string>
    <string name="shop_breakdown_activity_total">Total</string>
    <string name="seller_product_activity_dialog_no_centers_message">There was a problem trying to load centers</string>
    <string name="seller_product_activity_dialog_no_products_message">%s does not have any product from seller %s}</string>
    <string name="center_fragment_info_center_name">Center name</string>
    <string name="center_fragment_info_address">Address</string>
    <string name="center_fragment_info_city">City</string>
    <string name="center_fragment_info_post_code">Post code</string>
    <string name="center_fragment_info_country">Country</string>
    <string name="center_fragment_info_province">Province</string>
    <string name="center_fragment_info_email">Email</string>
    <string name="center_fragment_info_sector">Sector</string>
</resources>