<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout_create_profile_activity_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_create_profile_activity_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/editText_create_profile_activity_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/profile_activity_username"></EditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_create_profile_activity_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/editText_create_profile_activity_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/profile_activity_phone"></EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_create_profile_activity_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/editText_create_profile_activity_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/profile_activity_email"></EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_activity_profile_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_boton_rounded"
                android:backgroundTint="@color/colorPrimary"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/profile_activity_change_password"
                android:textColor="@android:color/white"></Button>


        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:elevation="15dp"
        android:src="@drawable/ic_full_cart_white" />

</FrameLayout>