<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout_change_password_activity_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_change_password_activity_oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/editText_change_password_activity_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText_change_password_activity_old_password"
                    android:inputType="textPassword"></EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_change_password_activity_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/editText_change_password_activity_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText_change_password_activity_new_password"
                    android:inputType="textPassword"></EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_change_password_activity_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/editText_change_password_activity_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText_change_password_activity_confirm_password"
                    android:inputType="textPassword"></EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_change_password_activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape_boton_rounded"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/change_password"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="16dp"
        android:elevation="15dp"
        android:src="@drawable/ic_full_cart_white" />

</FrameLayout>