<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgView_fragment_center_center_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:elevation="20dp"
            >

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout_fragment_center_info_fields_container"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="false"
                android:text="@string/center_fragment_info_center_name"
                android:textColor="@color/primaryText"
                android:textSize="15dp"></TextView>


            <EditText
                android:id="@+id/editText_fragment_center_info_center_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:editable="false"
                android:focusable="false"
                
                android:textColor="@color/secondaryText"
                android:textSize="15dp"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="false"
                android:text="@string/center_fragment_info_address"
                android:textColor="@color/primaryText"
                android:textSize="15dp"></TextView>


            <EditText
                android:id="@+id/editText_fragment_center_info_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:focusable="false"
                android:editable="false"
                
                android:textColor="@color/secondaryText"
                android:textSize="15dp"
                android:singleLine="false"
                ></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="false"
                android:text="@string/center_fragment_info_city"
                android:textColor="@color/primaryText"
                android:textSize="15dp"></TextView>


            <EditText
                android:id="@+id/editText_fragment_center_info_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:focusable="false"
                android:editable="false"
                
                android:textColor="@color/secondaryText"
                android:textSize="15dp"

                ></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="false"
                android:text="@string/center_fragment_info_post_code"
                android:textColor="@color/primaryText"
                android:textSize="15dp"></TextView>


            <EditText
                android:id="@+id/editText_fragment_center_info_post_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:focusable="false"

                android:editable="false"
                android:focusedByDefault="true"
                
                android:textColor="@color/secondaryText"
                android:textSize="15dp"

                ></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="false"
                android:text="@string/center_fragment_info_country"
                android:textColor="@color/primaryText"
                android:textSize="15dp"></TextView>


            <EditText
                android:id="@+id/editText_fragment_center_info_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:focusable="false"
                android:editable="false"
                
                android:textColor="@color/secondaryText"
                android:textSize="15dp"

                ></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="false"
                android:text="@string/center_fragment_info_province"
                android:textColor="@color/primaryText"
                android:textSize="15dp"></TextView>


            <EditText
                android:id="@+id/editText_fragment_center_info_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:focusable="false"
                android:editable="false"
                
                android:textColor="@color/secondaryText"
                android:textSize="15dp"

                ></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="false"
                android:text="@string/center_fragment_info_email"
                android:textColor="@color/primaryText"
                android:textSize="15dp"></TextView>


            <EditText
                android:id="@+id/editText_fragment_center_info_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:editable="false"
                android:focusable="false"
                
                android:textColor="@color/secondaryText"
                android:textSize="15dp"

                ></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="false"
                android:text="@string/center_fragment_info_sector"
                android:textColor="@color/primaryText"
                android:textSize="15dp"></TextView>


            <EditText
                android:id="@+id/editText_fragment_center_info_sector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:focusable="false"
                android:editable="false"
                
                android:textColor="@color/secondaryText"
                android:textSize="15dp"

                ></EditText>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>